# rust_todo

./: .env  Cargo.toml
migrations/2023-02-01-152543_create_todos/: up.sql
migrations/2023-02-01-195721_todo_add_completed/: down.sql  up.sql
migrations/2023-02-17-160810_change_completed_on_to_nullable/: down.sql  up.sql
migrations/2023-02-17-162538_remove_completed_field_from_todo/: down.sql  up.sql
migrations/2023-02-17-165537_drop_default_from_completed_on/: down.sql  up.sql
src/: main.rs
src/console/: mod.rs
src/db/: mod.rs  models.rs  schema.rs
src/errors/: mod.rs
src/warehouse/: mod.rs
src/warehouse/todo/: mod.rs
src/webapp/: mod.rs
src/webapp/controllers/todo_controller/: mod.rs
