[package]
name = "todos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
diesel = { version = "2.0.0", features = ["postgres", "chrono"] }
dotenvy = "0.15"
actix-web = "4"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
env_logger = "0.10.0"
actix-cors = "0.6.4"

